--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,13 +1,13 @@
-header {
+.header {
   background-color: blue;
   padding: 0.5vw;
 }
 
-form {
+.form {
   margin: 0 auto;
   width: fit-content;
 
   input {
-    margin-right: 1vw;
+    margin-right: 0.5vw;
   }
 }
